Fix missing overflow style for delayed function (for too many function arguments)

--- a/chrome/content/style/editor.css
+++ b/chrome/content/style/editor.css
@@ -199,7 +199,8 @@ menulist:not([label]) > .menulist-label-box, menulist[label=""] > .menulist-labe
 	margin: 0 !important;
 }
 
-#hc-editor-funcSets {
+#hc-editor-funcSets,
+#hc-editor-funcSets-delay {
 	overflow: auto;
 }
 #hc-editor-itemTypes {
